# gromo

./: .gitignore  .pre-commit-config.yaml  COVERAGE_ANALYSIS_FINAL_REPORT.md  COVERAGE_ANALYSIS_REPORT.md  COVERAGE_IMPACT_ANALYSIS.md  COVERAGE_IMPROVEMENT_TODO.md  DIFFERENTIAL_COVERAGE_VERIFICATION.md  FINAL_COVERAGE_ANALYSIS.md  OPTIMIZATION_SUMMARY.md  PERSISTENT_MEMORY_COVERAGE_INITIATIVE.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  README.html  README.md  REFACTORING_COMPLETION_SUMMARY.md  REFACTORING_IMPACT_SUMMARY.md  REFACTORING_TODO.md  api.html  coverage_analyzer.py  genindex.html  growingmodule.html  index.html  knowledge_graph.md  lineargrowingmodule.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sg_execution_times.html  tech_notes.html  tools.html  whats_new.html
.github/workflows/: pydoclint.yaml  ruff-check.yml  tests.yml
_downloads/7d13a297f4e0f5670792ab2433d6e7a9/: plot_mlp_run.ipynb
auto_examples/: index.html  plot_mlp_run.html  sg_execution_times.html
docs/: README.html  api.html  genindex.html  growingmodule.html  index.html  lineargrowingmodule.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  tools.html  whats_new.html
docs/_static/: basic.css  documentation_options.js  pygments.css
docs/auto_examples/: index.html  plot_mlp_run.html  sg_execution_times.html
docs/source/: README.rst  conf.py  growingmodule.rst  lineargrowingmodule.rst  whats_new.rst
examples/: plot_growing_container_tutorial.py  plot_growing_graph_tutorial.py  plot_growing_module_tutorial.py  plot_growing_network.py  plot_mlp_run.py
examples/helpers/: auxilliary_functions.py  synthetic_data.py
src/gromo/: growing_mlp_mixer.py  growing_residual_mlp.py
src/gromo/config/: loader.py
src/gromo/containers/: growing_block.py  growing_container.py  growing_dag.py  growing_graph_network.py  growing_mlp.py  growing_mlp_mixer.py  growing_network.py  growing_residual_mlp.py  resnet.py  sequential_growing_container.py
src/gromo/graph_network/: GrowableDAG.py
src/gromo/modules/: constant_module.py  conv2d_growing_module.py  growing_module.py  growing_normalisation.py  linear_growing_module.py
src/gromo/utils/: dependence_estimator.py  disk_dataset.py  locate_dependence.py  tensor_statistic.py  tools.py  training_utils.py  utils.py
tests/: test_GrowableDAG.py  test_conv2d_growing_block.py  test_conv2d_growing_module.py  test_dependence_estimator.py  test_differential_coverage_fixes.py  test_disk_dataset.py  test_growing_block.py  test_growing_container.py  test_growing_dag.py  test_growing_graph_network.py  test_growing_mlp.py  test_growing_mlp_mixer.py  test_growing_module.py  test_growing_normalisation.py  test_growing_residual_mlp.py  test_linear_growing_module.py  test_locate_dependence.py  test_maximum_differential_coverage.py  test_merge_modules.py  test_resnet.py  test_sequential_growing_container.py  test_tensor_statistics.py  test_tools.py  test_training_utils.py  test_utils.py  torch_unittest.py
